--- a/index.html
+++ b/index.html
@@ -14,44 +14,71 @@
 
 <body>
   <header class="header">
-    <h1 class="logo">becela glass art</h1>
+    <h1 class="logo">Yoga poses</h1>
   </header>
 
   <main>
-    <!-- Insert image srcset with class="showcase__image", data-title and data-dimensions -->
-    <section class="showcase" id="art">
-      <div class="showcase__imgContainer">
-        <img srcset="img/net-1@x2.jpg 2x"
-          src="img/net-1@x1.jpg" alt="art" class="showcase__image" data-original="Untitled 1" data-english="11 x 40 x 80">
-      </div>
+    <!-- Insert image srcset with class="showcase__image", data-original and data-english -->
+    <section class="section">
+      <div class="showcase">
+        <div class="showcase__imgContainer">
+          <img srcset="img/yoga_01@x2.jpg 2x"
+            src="img/yoga_01@x1.jpg" alt="Utthita Trikonasana pose" class="showcase__image" data-original="Utthita Trikonasana" data-english="Extended Triangle Pose">
+          <img srcset="img/yoga_02@x2.jpg 2x"
+            src="img/yoga_02@x1.jpg" alt="Utthita Trikonasana pose" class="showcase__image" data-original="Utthita Trikonasana" data-english="Extended Triangle Pose">
+          <img srcset="img/yoga_03@x2.jpg 2x"
+            src="img/yoga_03@x1.jpg" alt="Utthita Trikonasana pose" class="showcase__image" data-original="Utthita Trikonasana" data-english="Extended Triangle Pose">
+          <img srcset="img/yoga_04@x2.jpg 2x"
+            src="img/yoga_04@x1.jpg" alt="Utthita Trikonasana pose" class="showcase__image" data-original="Utthita Trikonasana" data-english="Extended Triangle Pose">
+          <img srcset="img/yoga_05@x2.jpg 2x"
+            src="img/yoga_05@x1.jpg" alt="Utthita Trikonasana pose" class="showcase__image" data-original="Utthita Trikonasana" data-english="Extended Triangle Pose">
+          <img srcset="img/yoga_06@x2.jpg 2x"
+            src="img/yoga_06@x1.jpg" alt="Utthita Trikonasana pose" class="showcase__image" data-original="Utthita Trikonasana" data-english="Extended Triangle Pose">
+          <img srcset="img/yoga_07@x2.jpg 2x"
+            src="img/yoga_07@x1.jpg" alt="Utthita Trikonasana pose" class="showcase__image" data-original="Utthita Trikonasana" data-english="Extended Triangle Pose">
+          <img srcset="img/yoga_08@x2.jpg 2x"
+            src="img/yoga_08@x1.jpg" alt="Utthita Trikonasana pose" class="showcase__image" data-original="Utthita Trikonasana" data-english="Extended Triangle Pose">
+          <img srcset="img/yoga_09@x2.jpg 2x"
+            src="img/yoga_09@x1.jpg" alt="Utthita Trikonasana pose" class="showcase__image" data-original="Utthita Trikonasana" data-english="Extended Triangle Pose">
+          <img srcset="img/yoga_10@x2.jpg 2x"
+            src="img/yoga_10@x1.jpg" alt="Utthita Trikonasana pose" class="showcase__image" data-original="Utthita Trikonasana" data-english="Extended Triangle Pose">
+          <img srcset="img/yoga_11@x2.jpg 2x"
+            src="img/yoga_11@x1.jpg" alt="Utthita Trikonasana pose" class="showcase__image" data-original="Trikonasana" data-english="Triangle Pose">
+          <img srcset="img/yoga_12@x2.jpg 2x"
+            src="img/yoga_12@x1.jpg" alt="Utthita Trikonasana pose" class="showcase__image" data-original="Trikonasana" data-english="Triangle Pose">
+        </div>
       
-      <!-- Left and right chevron arrows -->
-      <div class="showcase__icon-box showcase__icon-box--left">
-        <button class="showcase__button" aria-label="Show previous image">
-          <svg class="showcase__icon" id="showcase__icon--left">
-            <use xlink:href="img/iconsprite.svg#chevron-left"></use>
-          </svg>
-        </button>
-      </div>
-      <div class="showcase__icon-box showcase__icon-box--right">
-        <button class="showcase__button" aria-label="Show next image">
-          <svg class="showcase__icon" id="showcase__icon--right">
-            <use xlink:href="img/iconsprite.svg#chevron-right"></use>
-          </svg>
-        </button>
+        <!-- Left and right chevron arrows -->
+        <div class="showcase__icon-box showcase__icon-box--left">
+          <button class="showcase__button" id="showcase__button--left" aria-label="Show previous image">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="showcase__icon"><path d="M256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48zm43.4 289.1c7.5 7.5 7.5 19.8 0 27.3-3.8 3.8-8.7 5.6-13.6 5.6s-9.9-1.9-13.7-5.7l-94-94.3c-6.9-7.6-6.7-19.3.6-26.6l95.4-95.7c7.5-7.5 19.7-7.6 27.3 0 7.5 7.5 7.6 19.7 0 27.3l-81.9 81 79.9 81.1z"/></svg>
+          </button>
+        </div>
+        <div class="showcase__icon-box showcase__icon-box--right">
+          <button class="showcase__button" id="showcase__button--right" aria-label="Show next image">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="showcase__icon"><path d="M48 256c0 114.9 93.1 208 208 208s208-93.1 208-208S370.9 48 256 48 48 141.1 48 256zm244.5 0l-81.9-81.1c-7.5-7.5-7.5-19.8 0-27.3s19.8-7.5 27.3 0l95.4 95.7c7.3 7.3 7.5 19.1.6 26.6l-94 94.3c-3.8 3.8-8.7 5.7-13.7 5.7-4.9 0-9.9-1.9-13.6-5.6-7.5-7.5-7.6-19.7 0-27.3l79.9-81z"/></svg>
+          </button>
+        </div>
       </div>
 
       <!-- Dynamically generated bullets, one for each image from showcase__imgContainer -->
       <div class="bullets-box"></div>
 
-      <div class="description">
-        <p class="description__title"></p>
-        <p class="descritption__dimensions" id="author"></p>
+      <div class="name">
+        <p class="name__original"></p>
+        <p class="name__english"></p>
       </div>
     </section>
-  </main>
 
-    <hr>
+    <article class="article">
+      <div class="pose--1">
+        <p class="pose__intro">Pose description</p>
+        <h2 class="pose__title">Triangle Pose</h2>
+        <p class="pose__description">Begin in a lunge with your left foot forward, right leg back. Spin your back foot flat to the floor (parallel, or slightly turned in), and place your left fingertips on a block or the floor outside of your left shin. Bring your right hand to your hip. Ground into the ball of your left big toe and your left outer heel, and begin moving your left leg toward straight, lifting up your left kneecap (especially the inner knee) as you straighten. You can avoid locking the knee by drawing the base of your left shin back and the top of your shin forward (or maintain a micro-bend in your knee). Press your left fingertips into the floor or block. Roll your back inner thigh up, and spin the left side of your belly up toward the right side of your belly (as opposed to rolling your back hip back, which can be precarious for the pelvis). If your shoulders are stacked, extend your top arm straight up (without reaching behind you). Keep the back of your head in line with the back of your pelvis, and only turn your head to look up as far as is comfortable for your neck.</p>
+      </div>
+    </article>
+
+  </main>
 
   <!-- Contact info -->
   <footer class="footer" id="contact">
