--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
 
   <!-- Contact info -->
   <footer class="footer" id="contact">
-    <p class="footer__contact">Contact me: <a class="footer__mail" href="mailto:#">xyz@mail.mail</a></p>
-    <p class="footer__credits">2019 &copy; <a class="footer__credits-link" href="https://www.k-son.eu" target="_blank">k-son</a></p>
+    <p class="footer__credits">2019 &copy; <a class="footer__credits__link" href="https://www.k-son.eu" target="_blank">k-son</a></p>
+    <p class="footer__credits">Illustrations designed by <a class="footer__credits__link" href="http://www.freepik.com" target="_blank">macrovector / Freepik</a></p>
+    <p class="footer__credits">Texts by <a class="footer__credits__link" href="https://www.yogajournal.com/" target="_blank">yoga journal</a></p>
   </footer>
  
 
