--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Yoga poses</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap" rel="stylesheet">
   
   <script async src="js/script.js"></script>
   <script defer src="js/touch.js"></script>
@@ -65,8 +65,8 @@
       <div class="bullets-box"></div>
 
       <div class="name">
-        <p class="name__original"></p>
-        <p class="name__english"></p>
+        <p class="name--original"></p>
+        <p class="name--english"></p>
       </div>
     </section>
 
