Add scroll down indication arrows

--- a/index.html
+++ b/index.html
@@ -65,13 +65,20 @@
         <!-- Dynamically generated bullets, one for each image from showcase__imgContainer -->
         <div class="bullets-box"></div>
 
+        <!-- Pose names -->
         <div class="name">
           <p class="name--original"></p>
           <p class="name--english"></p>
         </div>
+
+        <!-- Scroll down encouragement -->
+        <button class="scroll-down__box" id="scrollArrows">
+          <div class="scroll-down__arrow"></div>
+          <div class="scroll-down__arrow"></div>
+        </button>
       </section>
 
-      <article class="article">
+      <article class="article" id="article">
         <div class="pose">
           <p class="pose__intro">Pose description</p>
           <h2 class="pose__title">Triangle Pose</h2>
