Add scroll-up button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <header class="header">
+    <header class="header" id="header">
       <h1 class="logo">Yoga poses</h1>
     </header>
 
@@ -72,7 +72,7 @@
         </div>
 
         <!-- Scroll down encouragement -->
-        <button class="scroll-down__box" id="scrollArrows">
+        <button class="scroll-down__box isVisible" id="scrollArrows">
           <div class="scroll-down__arrow"></div>
           <div class="scroll-down__arrow"></div>
         </button>
@@ -191,6 +191,12 @@
           </p>
         </div>
       </article>
+
+      <!-- Scroll up encouragement -->
+      <button class="scroll-up__box" id="scrollArrowsUp">
+        <div class="scroll-up__arrow"></div>
+        <div class="scroll-up__arrow"></div>
+      </button>
     </main>
 
     <!-- Contact info -->
