Tweak scroll button code

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="bullets-box"></div>
 
         <!-- Pose names -->
-        <div class="name">
+        <div class="name" id="names">
           <p class="name--original"></p>
           <p class="name--english"></p>
         </div>
@@ -200,7 +200,7 @@
     </main>
 
     <!-- Contact info -->
-    <footer class="footer">
+    <footer class="footer" id="footer">
       <p class="footer__credits">2019 &copy; <a class="footer__credits__link" href="https://www.k-son.eu" target="_blank">k-son</a></p>
       <p class="footer__credits">Illustrations designed by <a class="footer__credits__link" href="http://www.freepik.com" target="_blank">macrovector / Freepik</a></p>
       <p class="footer__credits">Texts by <a class="footer__credits__link" href="https://yogainternational.com/" target="_blank">Yoga International</a></p>
