--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="descripiton" content="Basic yoga poses with description and instructions how to practice.">
+  <meta name="author" content="Jacek Jarczok">
   <title>Yoga poses</title>
 
   <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap" rel="stylesheet">
