--- a/index.html
+++ b/index.html
@@ -39,27 +39,27 @@
             <img srcset="img/yoga_01@x2.jpg 2x"
               src="img/yoga_01@x1.jpg" alt="Utthita Trikonasana pose" class="showcase__image" data-original="Utthita Trikonasana" data-english="Triangle Pose">
             <img srcset="img/yoga_02@x2.jpg 2x"
-              src="img/yoga_02@x1.jpg" alt="Utthita Trikonasana pose" class="showcase__image" data-original="Vrksasana" data-english="Tree Pose">
+              src="img/yoga_02@x1.jpg" alt="Vrksasana pose" class="showcase__image" data-original="Vrksasana" data-english="Tree Pose">
             <img srcset="img/yoga_03@x2.jpg 2x"
-              src="img/yoga_03@x1.jpg" alt="Utthita Trikonasana pose" class="showcase__image" data-original="Salamba Sarvangasana" data-english="Shoulder Stand Pose">
+              src="img/yoga_03@x1.jpg" alt="Salamba Sarvangasana pose" class="showcase__image" data-original="Salamba Sarvangasana" data-english="Shoulder Stand Pose">
             <img srcset="img/yoga_04@x2.jpg 2x"
-              src="img/yoga_04@x1.jpg" alt="Utthita Trikonasana pose" class="showcase__image" data-original="Utkatasana" data-english="Chair Pose">
+              src="img/yoga_04@x1.jpg" alt="Utkatasana pose" class="showcase__image" data-original="Utkatasana" data-english="Chair Pose">
             <img srcset="img/yoga_05@x2.jpg 2x"
-              src="img/yoga_05@x1.jpg" alt="Utthita Trikonasana pose" class="showcase__image" data-original="Halasana" data-english="Plow Pose">
+              src="img/yoga_05@x1.jpg" alt="Halasana pose" class="showcase__image" data-original="Halasana" data-english="Plow Pose">
             <img srcset="img/yoga_06@x2.jpg 2x"
-              src="img/yoga_06@x1.jpg" alt="Utthita Trikonasana pose" class="showcase__image" data-original="Adho Mukha Svanasana" data-english="Downward-Facing Dog">
+              src="img/yoga_06@x1.jpg" alt="Adho Mukha Svanasana pose" class="showcase__image" data-original="Adho Mukha Svanasana" data-english="Downward-Facing Dog">
             <img srcset="img/yoga_07@x2.jpg 2x"
-              src="img/yoga_07@x1.jpg" alt="Utthita Trikonasana pose" class="showcase__image" data-original="Sukhasana" data-english="Easy Pose">
+              src="img/yoga_07@x1.jpg" alt="Sukhasana pose" class="showcase__image" data-original="Sukhasana" data-english="Easy Pose">
             <img srcset="img/yoga_08@x2.jpg 2x"
-              src="img/yoga_08@x1.jpg" alt="Utthita Trikonasana pose" class="showcase__image" data-original="Virabhadrasana III" data-english="Warrior III Pose">
+              src="img/yoga_08@x1.jpg" alt="Virabhadrasana III pose" class="showcase__image" data-original="Virabhadrasana III" data-english="Warrior III Pose">
             <img srcset="img/yoga_09@x2.jpg 2x"
-              src="img/yoga_09@x1.jpg" alt="Utthita Trikonasana pose" class="showcase__image" data-original="Eka Pada Rajakapotasana" data-english="Pigeon Pose">
+              src="img/yoga_09@x1.jpg" alt="Eka Pada Rajakapotasana pose" class="showcase__image" data-original="Eka Pada Rajakapotasana" data-english="Pigeon Pose">
             <img srcset="img/yoga_10@x2.jpg 2x"
-              src="img/yoga_10@x1.jpg" alt="Utthita Trikonasana pose" class="showcase__image" data-original="Virabhadrasana II" data-english="Warrior II Pose">
+              src="img/yoga_10@x1.jpg" alt="Virabhadrasana II pose" class="showcase__image" data-original="Virabhadrasana II" data-english="Warrior II Pose">
             <img srcset="img/yoga_11@x2.jpg 2x"
-              src="img/yoga_11@x1.jpg" alt="Utthita Trikonasana pose" class="showcase__image" data-original="Bhujangasana" data-english="Cobra Pose">
+              src="img/yoga_11@x1.jpg" alt="Bhujangasana pose" class="showcase__image" data-original="Bhujangasana" data-english="Cobra Pose">
             <img srcset="img/yoga_12@x2.jpg 2x"
-              src="img/yoga_12@x1.jpg" alt="Utthita Trikonasana pose" class="showcase__image" data-original="Supta Virasana" data-english="Reclining Hero Pose">
+              src="img/yoga_12@x1.jpg" alt="Supta Virasana pose" class="showcase__image" data-original="Supta Virasana" data-english="Reclining Hero Pose">
           </div>
         
           <!-- Left and right chevron arrows -->
