Add 'use strict' and defer attribute

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <meta name="msapplication-config" content="./favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
   
-  <script async src="js/script.js"></script>
+  <script defer src="js/script.js"></script>
   <script defer src="js/touch.js"></script>
   <link rel="stylesheet" href="css/style.css">
 </head>
